--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+#Server
+server.port=8180
+
+#DB
 spring.jpa.hibernate.ddl-auto=none
-spring.datasource.url=jdbc:postgresql://192.168.33.10:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.url=jdbc:postgresql://192.168.33.10:5432/ghostcode
+spring.datasource.username=ghostcode
+spring.datasource.password=171201@Monkey
 spring.jpa.properties.hibernate.default_schema=tdd
