mutation test coverage adjustment to services and models only

--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,8 @@
 				</dependencies>
 				<configuration>
 					<targetClasses>
-						<param>com.formation.*</param>
+						<param>com.formation.service.*</param>
+						<param>com.formation.web.model.*</param>
 					</targetClasses>
 					<targetTests>
 						<param>com.formation.service.*</param>
