owasp dependency check

--- a/pom.xml
+++ b/pom.xml
@@ -96,6 +96,14 @@
 					</outputFormats>
 				</configuration>
 			</plugin>
+			<plugin>
+				<groupId>org.owasp</groupId>
+				<artifactId>dependency-check-maven</artifactId>
+				<version>9.2.0</version>
+				<configuration>
+					<failBuildOnCVSS>7.0</failBuildOnCVSS>
+				</configuration>
+			</plugin>
 		</plugins>
 	</build>
 </project>
